--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
     <div class="container">
-        <h1 class="logo">SIT <span class="on">ON</span> CHAIR</h1>
+        <h1 class="logo">MAKE <span class="on">UP</span> YOURSELF</h1>
         <nav>
             <ul>
                 <li class = "about" >O FIRMIE
@@ -33,10 +33,9 @@
             <div class="arrow_left arrow">&lt</div>
             <div class="chair_container">
                 <div class="chair_img_container">
-                    <ul>
-                        <li><img class="chair_img_black" src="Images/black_chair.png" alt="chair"></li>
-                        <li><img class="chair_img_red" style="display: none" src="Images/red_chair.png" alt="chair"></li>
-                    </ul>
+                   <img class="chair_img_one" src="Images/2.png" alt="chair">
+                    <img class="chair_img_two" style="display: none" src="Images/1.png" alt="chair">
+                
                 </div>
             </div>
             <div class="chair_text">
@@ -54,16 +53,16 @@
 <section class="articles">
     <div class="container">
         <div class="small_pic">
-            <img src="Images/box1_img.jpg">
+            <img src="Images/3.jpg">
             <div class="small_pic_text">
-                <p>Chair CLAIR</p>
+                <p>CLAIR</p>
                 <div class="small_pic_text_line"></div>
             </div>
         </div>
         <div class="small_pic">
-            <img src="Images/box2_img.jpg">
+            <img src="Images/4.jpg">
             <div class="small_pic_text">
-                <p>Chair MARGARITA</p>
+                <p>MARGARITA</p>
                 <div class="small_pic_text_line"></div>
             </div>
         </div>
@@ -85,10 +84,6 @@
             <div class="title_line"></div>
         </div>
         <div class="panel_cennik">
-            <div class="panel_circle_cennik">
-                <div class="panel_smallCircle_cennik">
-                </div>
-            </div>
             <h4>BASIC PLAN</h4>
             <div class="panel_circle_cena">
                 <h5>85<span class="cents">99</span> </h5>
@@ -103,10 +98,6 @@
             <input type="button" value="DOŁĄCZ" id="first">
         </div>
         <div class="panel_cennik_middle">
-            <div class="panel_circle_cennik_middle">
-                <div class="panel_smallCircle_cennik_middle">
-                </div>
-            </div>
             <h4>STANDART PLAN</h4>
             <div class="panel_circle_cena_middle">
                 <h5>95<span class="cents_middle">99</span> </h5>
@@ -122,10 +113,6 @@
             <input type="button" value="DOŁĄCZ" id="second">
         </div>
         <div class="panel_cennik">
-            <div class="panel_circle_cennik">
-                <div class="panel_smallCircle_cennik">
-                </div>
-            </div>
             <h4>ADVANCE PLAN</h4>
             <div class="panel_circle_cena">
                 <h5 id="price_third">211<span class="cents">00</span> </h5>
@@ -190,7 +177,7 @@
         </section>
 
         <section class="image_part inline">
-            <img src="Images/red_chair.png">
+            <img src="Images/2.png">
         </section>
 
         <section class="summary_part inline">
@@ -235,7 +222,7 @@
         </div>
         <div class="pic_contact_box">
             <div class="pic_box">
-                <img src="Images/red_chair.png">
+                <img src="Images/1.png">
             </div>
             <div class="checkboxData">
                 <img src="Images/form_ok.jpg">
@@ -250,7 +237,7 @@
 <footer>
     <div class="container">
         <div class="footer_text">
-            <p>Copyright 2014 | All Rights Reserved - Sit On Chair</p>
+            <p>Copyright 2014 | All Rights Reserved - Make Up Yourself</p>
         </div>
         <div class="social_media">
             <img src="Images/flickr.png">
@@ -259,7 +246,7 @@
             <img src="Images/twitter.png">
         </div>
         <div class="logo_footer">
-            <p>SIT <b>ON</b> CHAIR</p>
+            <p>MAKE <b class="on">UP</b> YOURSELF</p>
         </div>
     </div>
 </footer>
