--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <h1 class="logo">MAKE <span class="on">UP</span> YOURSELF</h1>
         <nav>
             <ul>
-                <li class = "about" >O FIRMIE
+                <li class = "about" >ABOUT
                     <ul class = "aboutMenu" style="display: none">
                         <div id="triangle-up"></div>
-                        <li class="aboutMenuList">Aktualności</li>
-                        <li class="aboutMenuList">Nasz Team</li>
-                        <li class="aboutMenuList">Historia</li>
+                        <li class="aboutMenuList">About</li>
+                        <li class="aboutMenuList">Our Team</li>
+                        <li class="aboutMenuList">Who we are</li>
                     </ul>
                 </li>
-                <li>GALERIA</li>
-                <li>KONTAKT</li>
+                <li>GALLERY</li>
+                <li>CONTACT</li>
             </ul>
         </nav>
     </div>
@@ -39,10 +39,10 @@
                 </div>
             </div>
             <div class="chair_text">
-                <h2>SIT <span class="on"> ON </span> OUR <span class="on">CHAIR</span></h2>
+                <h2>MAKE <span class="on"> UP </span> YOUR <span class="on">SELF</span></h2>
                 <p class="chair_paragraf">Sweet roll sugar plum soufflé. Jelly caramels sesame snaps sweet roll chocolate bar jelly-o. Toffee muffin caramels icing soufflé jelly-o. Bear claw tiramisu fruitcake cake liquorice candy muffin lollipop icing. Soufflé chocolate bar jelly sweet oat cake chocolate. Sesame snaps pie topping macaroon.</p>
                 <div class="chair_button">
-                    <input type="button" value="ZOBACZ WIĘCEJ">
+                    <input type="button" value="SEE MORE">
                 </div>
             </div>
             <div class="arrow_right arrow">&gt</div>
@@ -80,7 +80,7 @@
 <section class="cennik">
     <div class="container">
         <div class="panel_title">
-            <p>CENNIK</p>
+            <p>PRICES</p>
             <div class="title_line"></div>
         </div>
         <div class="panel_cennik">
@@ -91,11 +91,11 @@
             </div>
             <div class="options_list_cennik">
                 <ul>
-                    <li>Zakup towaru + dowóz</li>
-                    <li>Serwis</li>
+                    <li>With delivery</li>
+                    <li>Shipping</li>
                 </ul>
             </div>
-            <input type="button" value="DOŁĄCZ" id="first">
+            <input type="button" value="ADD" id="first">
         </div>
         <div class="panel_cennik_middle">
             <h4>STANDART PLAN</h4>
@@ -105,12 +105,12 @@
             </div>
             <div class="options_list_cennik_middle">
                 <ul>
-                    <li>Zakup towaru + dowóz</li>
-                    <li>Serwis</li>
-                    <li>Gwarancja 5 lat</li>
+                    <li>With delivery</li>
+                    <li>10 extra colors</li>
+                    <li>Shipping</li>
                 </ul>
             </div>
-            <input type="button" value="DOŁĄCZ" id="second">
+            <input type="button" value="ADD" id="second">
         </div>
         <div class="panel_cennik">
             <h4>ADVANCE PLAN</h4>
@@ -120,13 +120,13 @@
             </div>
             <div class="options_list_cennik">
                 <ul>
-                    <li>Zakup towaru + dowóz</li>
-                    <li>Serwis</li>
-                    <li>Gwarancja 5 lat</li>
-                    <li>Porady projektanta</li>
+                    <li>With delivery</li>
+                    <li>20 extra colors</li>
+                    <li>Shipping</li>
+                    <li>Stylist advisory</li>
                 </ul>
             </div>
-            <input type="button" value="DOŁĄCZ" id="third">
+            <input type="button" value="ADD" id="third">
         </div>
 
     </div>
@@ -136,13 +136,13 @@
     <div class="main_width container">
         <section class="choice_part inline">
             <div class="appHeader">
-                <h3>SKOMPONUJ SWOJE KRZESŁO</h3>
+                <h3>CREATE YOUR OWN PALLETE</h3>
                 <span class="green_bell"></span>
             </div>
 
             <div class="form">
                 <div class="drop_down_list">
-                    <span class="list_label">Wybierz rodzaj</span>
+                    <span class="list_label">Choose type</span>
                     <span class="list_arrow"></span>
                     <ul class="list_panel chairType">
                         <li>Clair</li>
@@ -151,25 +151,25 @@
                     </ul>
                 </div>
                 <div class="drop_down_list">
-                    <span class="list_label">Wybierz kolor</span>
+                    <span class="list_label">Choose style</span>
                     <span class="list_arrow"></span>
                     <ul class="list_panel chairColor">
-                        <li>Czerwony</li>
-                        <li>Czarny</li>
-                        <li>Pomarańczowy</li>
+                        <li>Satine</li>
+                        <li>Pearl</li>
+                        <li>Gloss</li>
                     </ul>
                 </div>
                 <div class="drop_down_list">
-                    <span class="list_label">Wybierz materiał</span>
+                    <span class="list_label">Choose color</span>
                     <span class="list_arrow"></span>
                     <ul class="list_panel chairTexture">
-                        <li>Tkanina</li>
-                        <li>Skóra</li>
+                        <li>Red</li>
+                        <li>Pink</li>
                     </ul>
                 </div>
                 <div class="checkbox check-box">
                     <input type="checkbox" id="transport" data-transport-price="200">
-                    <label for="transport">Transport</label>
+                    <label for="transport">Shipping</label>
                 </div>
                 <!--<div class="checkbox"></div>-->
                 <!--<span class="list_label inline_text">Transport</span>-->
@@ -182,13 +182,13 @@
 
         <section class="summary_part inline">
             <div class="align_right">
-                <h3>PODSUMOWANIE</h3>
+                <h3>YOUR ORDER</h3>
                 <span class="green_bell"></span>
             </div>
 
             <div class="summary_panel">
                 <div class="panel_left">
-                    <h4 class="title">Twój fotel</h4>
+                    <h4 class="title">Your pallete</h4>
                     <span class="color"></span>
                     <span class="pattern"></span>
                     <span class="transport"></span>
@@ -199,10 +199,10 @@
                     <span class="pattern value"></span>
                     <span class="transport value"></span>
                 </div>
-                <div class="sum_label">SUMA</div>
+                <div class="sum_label">TOTAL</div>
                 <div class="sum"><strong></strong></div>
             </div>
-            <a href="" class="green_button">Zamawiam</a>
+            <a href="" class="green_button">Order</a>
         </section>
     </div>
 </section>
@@ -210,14 +210,14 @@
 <section class="contact">
     <div class="container">
         <div class="panel_title">
-            <p>KONTAKT</p>
+            <p>CONTACT</p>
             <div class="title_line"></div>
         </div>
         <div class="formula_contact">
             <form>
-                <p><input type="text" placeholder="Imię"></p>
+                <p><input type="text" placeholder="Name"></p>
                 <p><input type="email" placeholder="Email"></p>
-                <p><textarea cols="30" rows="4">Wiadomość</textarea></p>
+                <p><textarea cols="30" rows="4">Message</textarea></p>
             </form>
         </div>
         <div class="pic_contact_box">
@@ -227,8 +227,8 @@
             <div class="checkboxData">
                 <img src="Images/form_ok.jpg">
             </div>
-            <div class="pic_contact_checkbox_text"><p>Zgadzam się na przetwarzanie danych osobowych</p></div>
-            <input type="button" value="WYŚLIJ">
+            <div class="pic_contact_checkbox_text"><p>I agree for privacy terms</p></div>
+            <input type="button" value="SEND">
         </div>
 
     </div>
